--- a/MessageBoardSPA/html/index.html
+++ b/MessageBoardSPA/html/index.html
@@ -29,21 +29,21 @@
                 <div class="col-6">
                     <form class="mt-2">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                                else.</small>
+                            <div class="row">
+                                <label class="col-3" for="exampleInputEmail1">Name</label>
+                                <input type="text" class="form-control col-8">
+                            </div>
+                            <div class="row">
+                                <label class="col-3" for="exampleInputEmail1">Title</label>
+                                <input type="text" class="form-control col-8">
+                            </div>
+                            <div class="row">
+                                <label class="col-3" for="exampleInputEmail1">Comment</label>
+                                <textarea cols="45" rows="5">
+                                    </textarea>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Post</button>
                     </form>
                 </div>
                 <div class="offset-3"></div>
