--- a/MessageBoardSPA/html/index.html
+++ b/MessageBoardSPA/html/index.html
@@ -27,24 +27,20 @@
             <div class="newThread row">
                 <div class="offset-3"></div>
                 <div class="col-6">
-                    <form class="mt-2">
-                        <div class="form-group">
-                            <div class="row">
-                                <label class="col-3" for="exampleInputEmail1">Name</label>
-                                <input type="text" class="form-control col-8">
-                            </div>
-                            <div class="row">
-                                <label class="col-3" for="exampleInputEmail1">Title</label>
-                                <input type="text" class="form-control col-8">
-                            </div>
-                            <div class="row">
-                                <label class="col-3" for="exampleInputEmail1">Comment</label>
-                                <textarea cols="45" rows="5">
+                    <div class="row">
+                        <label class="col-3" for="exampleInputEmail1">Name</label>
+                        <input type="text" class="form-control col-8" v-model="newThread.Name">
+                    </div>
+                    <!-- <div class="row">
+                        <label class="col-3" for="exampleInputEmail1">Title</label>
+                        <input type="text" class="form-control col-8" v-model="newThread.Title">
+                    </div> -->
+                    <div class="row">
+                        <label class="col-3" for="exampleInputEmail1">Comment</label>
+                        <textarea cols="45" rows="5" v-model="newThread.Comment">
                                     </textarea>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Post</button>
-                    </form>
+                    </div>
+                    <button class="btn btn-primary" @click="newThreadPost">Post</button>
                 </div>
                 <div class="offset-3"></div>
             </div>
@@ -65,6 +61,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="../js/xdate.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="../js/vueUse.js"></script>
     <script src="../js/sideBar.js"></script>
