--- a/MessageBoard/MessageBoardApi/MessageBoardSPA/html/index.html
+++ b/MessageBoard/MessageBoardApi/MessageBoardSPA/html/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 
 <head>
@@ -83,6 +83,7 @@
             </div>
         </div>
     </div>
+    <!--test-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
